--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -110,7 +110,7 @@
             .o-hero__title {
                 padding-top: 60px;
 
-                @include breakpoints("sm-tablet") {
+                @include breakpoints("tablet") {
                     padding-bottom: 125px;
                     padding-top: 100px;
                 }
@@ -126,7 +126,7 @@
 
             .o-hero__image {
                 @include breakpoints("tablet") {
-                    margin-top: 80px;
+                    margin-top: 40px;
                 }
             }
         }
