AWE-23: Adding back the initial scaffolding for the blog

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -25,5 +25,6 @@ $colors: (
         "medium-gray": #3E4E53,
         "light-gray": #6E848C,
         "lighter-gray": #DFEBEE,
+        "light-blue": #AFC3C8,
     ),
 );
