--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -1,7 +1,9 @@
 /*------------------------------------*\
   MOLECULES
 \*------------------------------------*/
-@import "button-row",
+@import "blog-featured",
+        "blog-post",
+        "button-row",
         "careers",
         "contact-info",
         "header",
