--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -2,7 +2,8 @@
   ORGANISMS
 \*------------------------------------*/
 
-@import "case-study-list",
+@import "blog-list",
+        "case-study-list",
         "contact-form",
         "hero",
         "home-animation",
