AWE-23: Current progress on the main blog page

--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -1,5 +1,28 @@
 .m-blog-featured {
-    height: 826px;
+    height: 626px;
     width: 100%;
     background-color: get-color-primary("fresh");
+
+    @include breakpoints("laptop") {
+        height: 826px;
+    }
+
+    &__title {
+        @include span-col(6);
+        padding-top: 258px;
+        color: get-color-primary("white");
+
+        @include breakpoints("sm-desktop") {
+            padding-top: 358px;
+        }
+
+        h1 {
+            margin-bottom: 85px;
+        }
+
+        > a {
+            @include font-size("base");
+            text-transform: uppercase;
+        }
+    }
 }
