--- a/src/assets/scss/02_molecule/_footer.scss
+++ b/src/assets/scss/02_molecule/_footer.scss
@@ -1,6 +1,16 @@
 .m-footer {
     padding: 60px 0;
 
+    &.-divider {
+        margin-top: 100px;
+        padding: 0;
+
+        .o-rhythm__container {
+            border-top: 2px solid #CCD3D6;
+            padding: 60px 0;
+        }
+    }
+
     a {
         @include font-size("base");
         color: get-color("neutral", "light-gray");
