--- a/src/assets/scss/00_base/_mixins.scss
+++ b/src/assets/scss/00_base/_mixins.scss
@@ -318,7 +318,7 @@
     }
 }
 
-// Grid
-// -------------------------------
-
-
+@mixin pull-col($col, $grid: $rhythm-grid) {
+    $grid-cols: map-get($grid, "columns");
+    margin-left: -percentage($col/$grid-cols);
+}
