AWE-23: Starting to update to the new version of the blog

--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -1,9 +1,5 @@
 .p-blog {
-    .m-header__logo svg path {
-        fill: get-color-primary("white");
-    }
-
     .m-header__page-title {
-        color: get-color-primary("white");
+        color: get-color-primary("after-hours");
     }
 }
