--- a/src/assets/scss/00_base/_typography.scss
+++ b/src/assets/scss/00_base/_typography.scss
@@ -106,6 +106,7 @@ a {
     text-decoration: none;
     color: inherit;
     font-weight: inherit;
+    transition: opacity 0.3s ease;
 
     &:not(.-inline) {
         &:hover {
