--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -1,27 +1,40 @@
 .m-blog-featured {
-    height: 626px;
+    height: 638px;
+    margin-top: 165px;
     width: 100%;
+    position: relative;
     background-color: get-color-primary("fresh");
 
     @include breakpoints("laptop") {
-        height: 826px;
+        height: 652px;
+    }
+
+    img {
+        left: 0;
+        position: absolute;
+        top: 0;
     }
 
     &__title {
         @include span-col(6);
-        padding-top: 258px;
+        @include push-col(6);
+        padding-top: 200px;
         color: get-color-primary("white");
 
         @include breakpoints("sm-desktop") {
-            padding-top: 358px;
         }
 
         h1 {
-            margin-bottom: 85px;
+            margin-bottom: 50px;
         }
 
         > a {
             @include font-size("base");
+            border-bottom: 2px solid get-color-primary("white");
+            display: inline-block;
+            padding-bottom: 5px;
+            font-weight: 600;
+            letter-spacing: 2px;
             text-transform: uppercase;
         }
     }
