AWE-23: Updating the styles for the featured section and the squiggles in the individual blog posts

--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -7,6 +7,10 @@ img {
     vertical-align: bottom;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .-push-one {
 @include span-col(12);
 
@@ -23,11 +27,27 @@ img {
     }
   }
 
+.-phone-only {
+    display: block;
+
+    @include breakpoints("sm-tablet") {
+        display: none !important;
+    }
+}
+
 .-mobile-only {
     display: block;
 
     @include breakpoints("tablet") {
         display: none !important;
+    }
+}
+
+.-tablet-and-desktop-only {
+    display: none;
+
+    @include breakpoints("sm-tablet") {
+        display: block;
     }
 }
 
