--- a/src/assets/scss/03_organism/_blog-list.scss
+++ b/src/assets/scss/03_organism/_blog-list.scss
@@ -1,27 +1,25 @@
 .o-blog-list {
+    @include clearfix();
     position: relative;
 
     .m-blog-post {
         margin-top: 60px;
+
+        &:first-child {
+            .m-blog-post__squiggle {
+                display: none;
+            }
+        }
 
         @include breakpoints("tablet") {
             margin-top: 180px;
         }
 
         &:last-child {
-            margin-bottom: 60px;
-
             @include breakpoints("tablet") {
                 margin-bottom: 180px;
             }
         }
-    }
-
-    &__streamlines {
-        position: absolute;
-        right: -70px;
-        top: 635px;
-        z-index: -1;
     }
 
     &__scroll {
