--- a/src/assets/scss/02_molecule/_footer.scss
+++ b/src/assets/scss/02_molecule/_footer.scss
@@ -7,7 +7,16 @@
 
         .o-rhythm__container {
             border-top: 2px solid #CCD3D6;
+            margin-left: 10%;
+            margin-right: 10%;
             padding: 60px 0;
+            width: 80%;
+
+            @include breakpoints("laptop") {
+                margin-left: auto;
+                margin-right: auto;
+                width: 100%;
+            }
         }
     }
 
@@ -29,7 +38,6 @@
     }
 
     &__right {
-
         @include breakpoints("tablet") {
             text-align: right;
         }
