--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -14,6 +14,10 @@
         overflow: hidden;
     }
 
+    .o-rhythm__container.-fluid {
+        padding: 0;
+    }
+
     &__background {
         position: absolute;
         left: 0;
