AWE-24: Creating a more semantic version of the blog

--- a/src/assets/scss/00_base/_mixins.scss
+++ b/src/assets/scss/00_base/_mixins.scss
@@ -317,3 +317,8 @@
         @content;
     }
 }
+
+@mixin pull-col($col, $grid: $rhythm-grid) {
+    $grid-cols: map-get($grid, "columns");
+    margin-left: percentage($col/$grid-cols) * -1;
+}
