--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -2,4 +2,139 @@
     .m-header__page-title {
         color: get-color-primary("after-hours");
     }
+
+    // Blog Post Page
+    // ----------------------------------------
+
+    &__background {
+        margin-top: 160px;
+        position: relative;
+
+        &__gradient {
+            height: 1300px;
+            width: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 0;
+            background: rgb(255,255,255);
+            background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+        }
+
+        &__wrapper {
+            padding-top: 200px;
+            position: relative;
+            z-index: 1;
+        }
+    }
+
+    header {
+        padding-top: 100px;
+        background-color: get-color-primary("white");
+
+        section {
+            @include span-col(8);
+            @include push-col(1);
+
+            h1 {
+                text-transform: lowercase;
+            }
+
+            h2 {
+               margin-top: 80px;
+               color: get-color-neutral("light-gray");
+            }
+        }
+
+        aside {
+            @include span-col(3);
+        }
+    }
+
+    main {
+        background-color: get-color-primary("white");
+
+        section {
+            @include span-col(10);
+            @include push-col(1);
+            margin-top: 80px;
+
+            p {
+                @include font-size(24px);
+                @include line-height(39px);
+
+                + p {
+                    margin-top: 30px;
+                }
+            }
+
+            blockquote {
+                @include span-col(9);
+                @include pull-col(1);
+                margin-bottom: 100px;
+                margin-top: 100px;
+
+                p {
+                    @include font-size(42px);
+                    @include line-height(54px);
+                    color: get-color-neutral("light-gray");
+                }
+            }
+        }
+    }
+
+    footer {
+        margin-top: 100px;
+
+        section {
+            @include span-col(7);
+            @include push-col(1);
+
+            .blog-artifact {
+                display: inline-block;
+                height: 2px;
+                margin-right: 27px;
+                width: 43px;
+                position: relative;
+                top: -5px;
+                background-color: get-color-primary("fresh");
+            }
+
+            a {
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+                margin-right: 25px;
+
+                svg {
+                    fill: get-color("neutral", "light-gray");
+                    transition: all 400ms ease;
+                }
+
+                &:hover {
+                    svg {
+                        fill: get-color("neutral", "gray");
+                    }
+                }
+            }
+        }
+
+        nav {
+            @include span-col(3);
+
+            a {
+                @include font-size("small");
+                display: inline-block;
+                color: get-color-neutral("light-gray");
+                font-weight: 200;
+                text-transform: lowercase;
+
+                &:first-child {
+                    margin-right: 40px;
+                }
+            }
+        }
+    }
+
+    
 }
