AWE-24: Updates for the blog author component; Responsive styling for the blog detail page

--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -38,7 +38,7 @@ img {
 .-mobile-only {
     display: block;
 
-    @include breakpoints("tablet") {
+    @include breakpoints("sm-tablet") {
         display: none !important;
     }
 }
