--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -1,7 +1,8 @@
 /*------------------------------------*\
   MOLECULES
 \*------------------------------------*/
-@import "blog-featured",
+@import "blog-author",
+        "blog-featured",
         "blog-post",
         "button-row",
         "careers",
