--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -3,18 +3,20 @@
     margin-top: 80px;
     width: 100%;
     position: relative;
+    display: table;
     background-color: get-color-primary("fresh");
 
-    @include breakpoints("laptop") {
+    @include breakpoints("tablet") {
+        display: block;
         margin-top: 160px;
     }
 
     &__image {
-        float: none;
+        display: block;
         width: 100%;
 
         @include breakpoints("sm-tablet") {
-            float: left;
+            display: table-cell;
             width: 40%;
         }
 
@@ -30,21 +32,28 @@
         color: get-color-primary("white");
 
         @include breakpoints("sm-tablet") {
-            float: left;
-            padding: 60px 60px 0 60px;
+            display: table-cell;
+            padding: 0 60px 0 60px;
+            vertical-align: middle;
             width: 60%;
-        }
-
-        @include breakpoints("tablet") {
-            padding-top: 100px;
-        }
-
-        @include breakpoints("lg-desktop") {
-            padding-top: 165px;
         }
 
         h1 {
             margin-bottom: 50px;
+            max-width: 75%;
+
+            @include breakpoints("sm-tablet") {
+                margin-bottom: 25px;
+                max-width: 100%;
+            }
+
+            @include breakpoints("tablet") {
+                margin-bottom: 50px;
+            }
+
+            @include breakpoints(1680px) {
+                max-width: 800px;
+            }
         }
 
         > a {
