AWE-25: Added additional blog posts and updated the blog content per GatherContent

--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -176,7 +176,8 @@
                 }
             }
 
-            ul {
+            ul,
+            ol {
                 margin-left: 20px;
 
                 li {
