--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -1,36 +1,21 @@
 .m-blog-post {
     width: 100%;
     position: relative;
+    font-family: $font-primary;
+    letter-spacing: normal;
+
+    &:not(.-inline):hover {
+        opacity: 1;
+
+        img {
+            transform: scale(1.2);
+        }
+    }
 
     &.-right {
         .m-blog-post__details {
             @include push-col(0);
-
-            &__wrapper {
-                text-align: right;
-            }
-        }
-
-        .m-blog-post__squiggle {
-            left: 0;
-        }
-    }
-
-    &__squiggle {
-        display: none;
-
-        @include breakpoints("laptop") {
-            display: block;
-            height: 450px;
-            position: absolute;
-            right: 0;
-            top: -275px;
-            z-index: -1;
-        }
-
-        @include breakpoints("sm-desktop") {
-            height: auto;
-            top: -350px;
+            text-align: right;
         }
     }
 
@@ -40,13 +25,17 @@
         z-index: 1;
 
         @include breakpoints("sm-tablet") {
-            @include span-col(5);
+            @include span-col(6);
             @include push-col(1);
         }
 
-        @include breakpoints("laptop") {
-            @include span-col(6);
-            @include push-col(1);
+        img {
+            width: 100%;
+            transition: all 0.6s ease !important;
+
+            @include breakpoints("sm-tablet") {
+                width: auto;
+            }
         }
     }
 
@@ -54,14 +43,9 @@
         @include span-col(12);
         position: relative;
         margin-top: 65px;
+        align-self: center;
 
         @include breakpoints("sm-tablet") {
-            @include span-col(5);
-            @include push-col(1);
-            margin-top: 60px;
-        }
-
-        @include breakpoints("laptop") {
             @include span-col(4);
             @include push-col(1);
             margin-top: 0;
@@ -76,10 +60,10 @@
             color: get-color-neutral("light-blue");
         }
 
-        p {
+        p:first-of-type {
             @include font-size("medium");
             @include line-height(32px);
-            color: get-color-primary("after-hours");
+            color: get-color-primary("fresh");
             margin-block-end: 0;
             margin-block-start: 0;
 
@@ -87,6 +71,11 @@
                 @include font-size("medium-large");
                 @include line-height("large");
             }
+        }
+
+        p:last-of-type {
+            @include font-size("base");
+            color: get-color-primary("after-hours");
         }
 
         a {
@@ -99,19 +88,6 @@
             font-weight: 600;
             letter-spacing: 2px;
             text-transform: uppercase;
-        }
-
-        &__wrapper {
-            margin-bottom: 32px;
-            padding-left: 0;
-            position: relative;
-            text-align: left;
-
-            @include breakpoints("laptop") {
-                margin-bottom: 0;
-                position: absolute;
-                bottom: 60px;
-            }
         }
     }
 }
