--- a/src/assets/scss/03_organism/_blog-list.scss
+++ b/src/assets/scss/03_organism/_blog-list.scss
@@ -3,12 +3,16 @@
     position: relative;
 
     .m-blog-post {
-        margin-top: 60px;
+        margin-top: 80px;
 
         &:first-child {
             .m-blog-post__squiggle {
                 display: none;
             }
+        }
+
+        @include breakpoints("sm-tablet") {
+            margin-top: 100px;
         }
 
         @include breakpoints("tablet") {
