AWE-23: Design tweaks for the blog listing page

--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -23,6 +23,7 @@
         @include span-col(12);
         position: relative;
         z-index: 1;
+        overflow: hidden;
 
         @include breakpoints("sm-tablet") {
             @include span-col(6);
