--- a/src/assets/scss/02_molecule/_blog-featured.scss
+++ b/src/assets/scss/02_molecule/_blog-featured.scss
@@ -1,9 +1,10 @@
 .m-blog-featured {
     @include clearfix();
-    margin-top: 80px;
     width: 100%;
-    position: relative;
-    display: table;
+    display: block;
+    position: static;
+    margin-top: 80px;
+    z-index: 0;
     background-color: get-color-primary("fresh");
     font-family: $font-primary;
     letter-spacing: normal;
@@ -16,9 +17,19 @@
         }
     }
 
+    &.-fade {
+        .m-blog-featured__overlay {
+            opacity: 0.5;
+        }
+    }
+
+    @include breakpoints("sm-tablet") {
+        display: table;
+    }
+
     @include breakpoints("tablet") {
-        display: block;
-        margin-top: 160px;
+        position: fixed;
+        top: 80px;
     }
 
     &__image {
@@ -32,7 +43,7 @@
         }
 
         img {
-            max-width: auto;
+            width: 100%;
             transition: all 0.6s ease !important;
         }
     }
@@ -77,6 +88,20 @@
 
         &__author {
             @include font-size(20px);
+        }
+    }
+
+    &__overlay {
+        display: none;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        position: absolute;
+        background-color: #000;
+        transition: all 1s ease;
+
+        @include breakpoints("tablet") {
+            display: block;
         }
     }
 }
