--- a/src/assets/scss/02_molecule/_footer.scss
+++ b/src/assets/scss/02_molecule/_footer.scss
@@ -2,20 +2,24 @@
     padding: 60px 0;
 
     &.-divider {
-        margin-top: 100px;
         padding: 0;
 
         .o-rhythm__container {
             border-top: 2px solid #CCD3D6;
-            margin-left: 10%;
-            margin-right: 10%;
+            margin-left: 16px;
+            margin-right: 16px;
+            width: calc(100% - 32px);
             padding: 60px 0;
-            width: 80%;
+
+            @include breakpoints("sm-tablet") {
+                margin-left: 32px;
+                margin-right: 32px;
+                width: calc(100% - 64px);
+            }
 
             @include breakpoints("laptop") {
                 margin-left: auto;
                 margin-right: auto;
-                width: 100%;
             }
         }
     }
