AWE-24: Adding new styles to create the experience that design was looking for as it relates to the scrolling effects on the blog screen;

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -21,6 +21,7 @@ $colors: (
         "sticky-blue": #2AB2C1,
     ),
     "neutral": (
+        "dark-blue": #123D4B,
         "gray": #13171C,
         "medium-gray": #3E4E53,
         "light-gray": #6E848C,
