--- a/src/assets/scss/02_molecule/_blog-author.scss
+++ b/src/assets/scss/02_molecule/_blog-author.scss
@@ -10,42 +10,86 @@
 
     &__image {
         float: left;
-        width: 90px;
+        padding-top: 20px;
+        width: 80px;
         text-align: left;
 
-        @include breakpoints("sm-tablet") {
-            float: none;
-            width: auto;
-            text-align: right;
+        @include breakpoints("sm-desktop") {
+            padding-top: 0;
         }
     }
 
     &__details {
+        @include font-size("base");
         float: left;
-        margin-left: 16px;
-        padding-right: 0;
+        margin-top: 10px;
+        padding-left: 16px;
+        color: get-color-neutral("dark-blue");
         text-align: left;
+        text-transform: lowercase;
 
         @include breakpoints("sm-tablet") {
-            float: none;
-            margin-left: 0;
-            padding-right: 15px;
-            text-align: right;
+            @include font-size("small");
+        }
+
+        @include breakpoints("sm-desktop") {
+            @include font-size(24px);
+        }
+    }
+
+    &__divider {
+        display: none;
+        margin-left: 7px;
+        margin-right: 7px;
+
+        @include breakpoints("sm-tablet") {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+        @include breakpoints("sm-desktop") {
+            display: inline-block;
+        }
+    }
+
+    &__date {
+        display: block;
+        margin-bottom: 6px;
+        position: relative;
+
+        @include breakpoints("sm-desktop") {
+            display: inline-block;
+            margin-bottom: 0;
+        }
+    }
+
+    &__name-position {
+        display: block;
+
+        .m-blog-author__divider {
+            display: inline-block;
+        }
+
+        @include breakpoints("sm-desktop") {
+            display: inline-block;
         }
     }
 
     &__name {
-        @include font-size("smaller");
-        text-transform: lowercase;
+        display: inline-block;
     }
 
     &__position {
-        @include font-size("smaller");
-        color: get-color-neutral("light-gray");
-        text-transform: lowercase;
+        display: inline-block;
     }
 
     &__links {
+        display: block;
+
+        @include breakpoints("sm-desktop") {
+            display: inline-block;
+        }
+
         a {
             display: inline-block;
             width: 20px;
@@ -57,7 +101,7 @@
             }
 
             svg {
-                fill: get-color("neutral", "light-gray");
+                fill: get-color-primary("after-hours");
                 transition: all 400ms ease;
             }
 
